tests/error/null_auto.gw
#! [contains] NullPtrException
var int i[];
foreach(a : i)
 <<< a >>>;
